--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -38,4 +38,23 @@ footer {
     transform-origin: bottom left;
     margin-left: 44px;
     letter-spacing: 22px;
-  }
+}
+
+@media (max-width: 768px) {
+    .list-group-item {
+        font-size: 14px;
+        letter-spacing: 2px;
+        margin-left: -10px;
+    }
+    .nocoFoot {
+        font-size: 20px;
+        font-family: 'Workbench', sans-serif;
+        width: 100%;
+        color: #5e5e5e;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        background: transparent;
+        padding: 10px 20px;
+    }
+}
