--- a/src/app/grid/grid.component.html
+++ b/src/app/grid/grid.component.html
@@ -20,7 +20,7 @@
                 <div class="copy1 col-md-6 text-md-end d-none d-md-block">
                     <!-- body copy here somedasy -->
                 </div>
-            </div>
+            </div>npm star
         </div>
     </header>
 
