--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -3,5 +3,5 @@
     <div class="corner top-right">no.co.</div>
     <div class="corner bottom-left">no.co.</div>
     <div class="corner bottom-right">no.co.</div>
-    <button routerLink="/home" class="enter-btn">numbered company industrial design 2013 - 2020 RIP</button>
+    <button routerLink="/home" class="enter-btn">enter</button>
 </body>
