--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,3 +5,20 @@ html, body {
     width: 100%;
 }
 
+@media (max-width: 768px) {
+    .row {
+        flex-direction: column;
+        align-items: center;
+    }
+    .col-3 {
+        width: 100%;
+        padding: 0 15px;
+    }
+    .col-2, .col-7 {
+        width: 100%;
+        text-align: center;
+    }
+    .project-detail {
+        margin-top: 20px; /* Adjust for better spacing on mobile */
+    }
+}
