--- a/src/app/grid/grid.component.html
+++ b/src/app/grid/grid.component.html
@@ -8,8 +8,8 @@
             <a href="/" class="nav-circle-right">Link</a>
             <div class="nav-circle-right"></div>
         </nav>
-        <div style="background-image: url('/assets/prince2.jpg'); height: 100%; background-size: cover; background-position: center;"
-            class="w-100 position-absolute"></div>
+        <div 
+            class="w-100 position-absolute about-bg"></div>
         <div class="position-absolute top-0 start-0 end-0 bottom-0 bg-dark opacity-50"></div>
         <div class="container position-relative p-0">
             <div class="row">
@@ -20,30 +20,16 @@
                 <div class="copy1 col-md-6 text-md-end d-none d-md-block">
                     <!-- body copy here somedasy -->
                 </div>
-            </div>npm star
+            </div>
         </div>
     </header>
 
     <section class="full-viewport-background second-background" id="more-info">
-        <div class="container-fluid py-5">
-            <div class="row g-0 justify-content-between">
-                <div class="col">
-                    <div class="card border-card" style="font-size: 80px; color: #C43E65;">
-                        20 <br>14
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card border-card" style="font-size: 80px; color: #C43E65;">
-                        20 <br>18
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card border-card" style="font-size: 80px; color: #C43E65;">
-                        20 <br>20
-                    </div>
-                </div>
+        <footer class="" id="about">
+            <div class="footer-content">
+                <h2>metal fabrication</h2>
             </div>
-        </div>
+        </footer>
     </section>
 
 
@@ -53,19 +39,31 @@
                 <h2>industrial design</h2>
             </div>
         </footer>
+    </section>
 
 
+    <section class="full-viewport-background" id="about">
+        <footer class="full-viewport-background fourth-background" id="about">
+            <div class="footer-content">
+                <h2>retail merch</h2>
+            </div>
+        </footer>
+    </section>
+
+    <section class="full-viewport-background" id="about">
+        <footer class="full-viewport-background fifth-background" id="about">
+            <div class="footer-content">
+                <h2>sculpture</h2>
+            </div>
+        </footer>
     </section>
 
     <section class="full-viewport-background third-background" id="about">
-        <nav class="custom-navbar">
-            <ul class="nav-list">
-                <li class="nav-item"><a href="#collections">Collections</a></li>
-                <li class="nav-item"><a href="#story">Story</a></li>
-                <li class="nav-item"><a href="#philosophy">Philosophy</a></li>
-                <li class="nav-item"><a href="#inventory">Inventory</a></li>
-            </ul>
-        </nav>
+        <div class="nocoBio">
+            <p class="">Numbered Company is a Toronto based, queer owned + operated industrial design studio, shipping and working internationally since 2014. Specializing in retail merchandizing, custom metal fabrication, and industrial services including structural welding services. </p>
+
+        </div>
+
   
 
 
