--- a/src/app/grid/grid.component.scss
+++ b/src/app/grid/grid.component.scss
@@ -70,6 +70,19 @@ html {
         padding-left: 15px;
         padding-bottom: 15px;
     }
+
+    .about-bg::before {
+        transform: rotate(90deg);
+        transform-origin: center center;
+    }
+}
+
+.about-bg {
+    background-image: url('/assets/prince2.jpg');
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+
 }
 
 .circle-nav,
@@ -101,7 +114,7 @@ html {
     text-decoration: none;
     margin-bottom: 10px;
     font-size: 10px;
-    color: transparent; 
+    color: transparent;
     transition: background-color 0.3s, color 0.3s;
 }
 
@@ -171,33 +184,42 @@ html {
     background-image: url('/assets/prince.jpg')
 }
 
+.fourth-background {
+    background-image: url('/assets/hop3.jpg ')
+}
+
+.fifth-background {
+    background-image: url('/assets/kitaceonline.jpg ')
+}
+
+
 .border-card {
     background: rgba(0, 0, 0, 0.2);
-    border: 3px solid #A8C43E; 
+    border: 3px solid #A8C43E;
     width: 300px;
-    height: 250px; 
-    margin: auto; 
+    height: 250px;
+    margin: auto;
     z-index: 1;
 }
 
 
 .full-viewport-background {
     width: 100%;
-    height: 100vh; 
+    height: 100vh;
     display: flex;
-    align-items: center; 
-    justify-content: center; 
-    text-align: center; 
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 
 .footer-content h2 {
     font-size: 150px;
     font-weight: normal;
-    margin-top: 600px; 
+    margin-top: 600px;
 
-    color: #43AFE6; 
-    width: 100%; 
-    height: auto; 
+    color: #43AFE6;
+    width: 100%;
+    height: auto;
     font-family: 'Vintage2';
     z-index: 1;
 }
@@ -206,34 +228,88 @@ html {
     border: 2px solid #A8C43E;
     border-radius: 30px;
     padding: 10px 20px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0); 
-    width: fit-content; 
-    margin: 0 auto; 
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0);
+    width: fit-content;
+    margin: 0 auto;
     position: absolute;
-    top: 30px; 
-    left: 50%; 
-    transform: translateX(-50%); 
-    z-index: 10; 
+    top: 30px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 10;
 }
 
 .nav-list {
     list-style: none;
     display: flex;
-    justify-content: space-between; 
+    justify-content: space-between;
     padding: 0;
-    margin: 0; 
+    margin: 0;
 }
 
 .nav-item {
-    padding: 0 55px; 
+    padding: 0 55px;
 }
 
 .nav-item a {
-    text-decoration: none; 
-    color: #9f7fc7; 
-   
+    text-decoration: none;
+    color: #9f7fc7;
+
 }
 
 #new-section.full-viewport-background::before {
-    background: rgba(0, 0, 0, 0.9); 
+    background: rgba(0, 0, 0, 0.9);
+}
+
+.nocoBio {
+    color: white;
+    width: 50%;
+    border: dotted 1px rgb(255, 255, 255);
+}
+
+@media (max-width: 768px) {
+
+    .title1,
+    .title2 {
+        font-family: 'Vintage';
+        font-size: 40px;
+        color: #3bc19a;
+        margin: auto;
+    }
+
+    .title2 {
+        font-size: 20px;
+        color: #A8C43E;
+        letter-spacing: 33px;
+    }
+
+    .footer-content h2 {
+        font-size: 30px;
+        font-weight: normal;
+        margin-top: 600px;
+        color: #43AFE6;
+        width: 100%;
+        height: auto;
+        font-family: 'Vintage2';
+        z-index: 1;
+    }
+
+    .nav-circle-right {
+        display: none;
+    }
+
+    .nav-circle {
+        width: 30px;
+        height: 30px;
+        background-color: transparent;
+        border: 1px solid #5A3EC4;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-decoration: none;
+        margin-bottom: 10px;
+        font-size: 10px;
+        color: transparent;
+        transition: background-color 0.3s, color 0.3s;
+    }
 }
