--- a/src/app/main-window/main-window.component.scss
+++ b/src/app/main-window/main-window.component.scss
@@ -1,19 +1,19 @@
 html,
 body {
   height: 100%;
-  min-height: 100%;
   margin: 0;
   padding: 0;
+  overflow-x: hidden; /* Prevent horizontal overflow */
 }
 
 :host {
   display: block;
   background-color: #F4F0EA;
-  height: 100vh;
-  min-height: 100vh;
+  min-height: 100vh; /* Allow for vertical scrolling */
+  height: auto;
   background-size: cover;
   background-position: center;
-  overflow: hidden;
+  overflow: auto; /* Allow scrolling */
 }
 
 .project-title,
@@ -27,12 +27,11 @@ body {
   color: #3F00FF;
   font-size: 28px;
   letter-spacing: 10px;
-
 }
 
 .project-season {
   font-size: 12px;
-  margin-top: 200px;
+  margin-top: 20px;
   cursor: pointer;
 }
 
@@ -40,43 +39,52 @@ body {
   font-size: 15px;
   letter-spacing: 8px;
   margin: 50px 50px 0 100px;
-  overflow: auto;
 }
 
 .image-container {
   width: 100%;
-  height: 100%;
   overflow: hidden;
   position: relative;
-  border: 2px dotted black;
-
 }
 
-
-.image-container::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: rgba(0, 0, 0, 0.3);
-  z-index: 2; 
-
-}
 .image-container img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.container-fluid,
-.row {
-  height: 100%;
-}
-
-.img-fluid {
   width: 100%;
   height: auto;
   object-fit: cover;
+  border: 1px dotted black; /* Add 1px dotted black border */
+}
+
+.additional-images {
+  margin-top: 50px;
+}
+
+.more-images-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end; /* Align images to the right */
+}
+
+.more-images-container img {
+  width: 100%; /* Set image width to 90% */
+  margin-bottom: 20px;
+  object-fit: cover;
+  border: 1px dotted rgb(0, 0, 0); /* Keep the dotted 1px black border */
+  float: right; /* Float images to the right */
+}
+
+.circle {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 1px solid black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 20px;
+  cursor: pointer;
+}
+
+.arrow {
+  font-size: 24px;
+  color: #3F00FF;
 }
